--- a/output/kjaymiller-render-engine-theme.html
+++ b/output/kjaymiller-render-engine-theme.html
@@ -1,6 +1,41 @@
-# KJayMiller Render Engine Theme
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <link rel="icon" href="https://fav.farm/👩🏾‍💻" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="/static/css/tailwind.css" />
+<link rel="stylesheet" href="/static/css/article.css" />    <title>
+      Kjaymiller Render Engine Theme - Untitled Site
+    </title>
+  </head>
+  <body class="dark:bg-slate-800 dark:text-slate-100"> 
+    <div class="flex flex-col h-screen">
 
-[![Github Build Status](https://img.shields.io/endpoint.svg?url=https%3A%2F%2Factions-badge.atrox.dev%2Fkjaymiller%2Frender_engine_theme_kjaymiller%2Fbadge%3Fref%3Dmain&style=flat-square)](https://actions-badge.atrox.dev/kjaymiller/render_engine_theme_kjaymiller/goto?ref=main)
+<nav role="navigation"><div class="
+  bg-gradient-to-br    
+from-gray-600
+to-gray-700
+  flex
+  flex-wrap
+  items-baseline
+  px-5
+  py-2
+  ">
+    <h1 class="title mx-3 text-5xl font-bold text-gray-200">
+      <a class="no-underline" href="/">Untitled Site</a>
+    </h1>
+    </div>
+    <div class="my-2 p-2 flex justify-center">
+  </div>
+</nav>      <main class="flex-grow mx-2 md:mx-auto container">
+<section>
+<div class="my-4">
+    <h1 class="text-4xl font-extrabold">Kjaymiller Render Engine Theme</h1>
+</div>
+<article class="prose">
+    # KJayMiller Render Engine Theme
 
 This is a theme based on the early development of render-engine for kjaymiller.com.
 
@@ -68,3 +103,24 @@ settings = {
 ```
 
 5. Build your site
+</article>
+</section>
+      </main role="main">
+      <div>
+<hr />
+<footer role="contentinfo" class="grid grid-cols-3 bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
+  <div id="footer-column-1" class= md:mx-auto text-small">
+    <p>http://localhost:8000/</p>
+    <p>Website Created with <a href="https://github.com/render-engine/render-engine">Render Engine</a> and <a
+                            class="hover:underline" href="https://github.com/kjaymiller/render_engine_theme_kjaymiller">kjaymiller theme</a>
+    
+    </div>
+    <div id="footer-column-2">
+    </div>
+    <div>
+  </div>
+</footer>      </div>
+    </div>
+  </body>
+
+</html>
