--- a/output/theme-settings.html
+++ b/output/theme-settings.html
@@ -2,39 +2,46 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <link rel="icon" href="https://fav.farm/👩🏾‍💻" />
+    <link rel="icon" href="https://fav.farm/📓" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/static/css/tailwind.css" />
+    <script src="https://kit.fontawesome.com/94d9a219ee.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/static/css/article.css" />    <title>
       Theme Settings - Kjaymiller Render Engine Theme
     </title>
   </head>
   <body class="dark:bg-slate-800 dark:text-slate-100"> 
     <div class="flex flex-col h-screen">
-
-<nav role="navigation"><div class="
+<div class="
   bg-gradient-to-br    
-from-gray-600
-to-gray-700
+from-purple-600
+to-indigo-800
   flex
   flex-wrap
   items-baseline
   px-5
   py-2
   ">
-    <h1 class="title mx-3 text-5xl font-bold text-gray-200">
+    <h1 class="title mx-3 text-2xl font-bold text-gray-200">
       <a class="no-underline" href="/">Kjaymiller Render Engine Theme</a>
     </h1>
-    </div>
-    <div class="my-2 p-2 flex justify-center">
+    <div class="hidden md:block p-2">
   </div>
-</nav>      <main class="flex-grow mx-2 md:mx-auto container">
+<a class="p-1" href="https://www.youtube.com/channel/UCjoJU65IbXkKXsNqydro05Q/">
+    <i class="text-red-700 text-2xl m-1 fa-brands fa-youtube"></i>
+</a>
+<a class="rounded-xl opacity-50 p-1 hover:opacity-100" href="https://twitter.com/kjaymiller">
+    <i class=" text-blue-500 m-1 text-2xl fa-brands fa-twitter-square"></i>
+</a>
+<a class="rounded-xl opacity-50  p-1 hover:opacity-100" href="https://linkedin.com/in/kjaymiller">
+    <i class=" text-blue-900 m-1 text-2xl fa-brands fa-linkedin"></i>
+</a></div>      <div class="flex-grow mx-2 md:mx-auto container">
 <section>
 <div class="my-4">
     <h1 class="text-4xl font-extrabold">Theme Settings</h1>
 </div>
-<article class="prose lg:prose-xl dark:prose-invert prose-slate">
+<article class="prose">
     <p>This theme supports embeds for many different tools.</p>
 
 <h2>Site Settings</h2>
@@ -45,33 +52,33 @@ to-gray-700
 
 <p>The author is used in the footer and in the meta tags. Be sure that the Author format is correct.</p>
 
-<p><code>
-SITE_AUTHOR = {
+<pre><code>SITE_AUTHOR = {
     "name": "Jay Miller",
     "email": "kjaymiller@gmail.com",
 }
-</code></p>
+</code></pre>
 
 <h2>Adding theme settings</h2>
 
 <p>Here is an example settings for this theme:</p>
 
-<p><code>json
-"theme": {
-    "favicon": "https:fav.farm/☕",
-    "fontawesome": "abcd1234",
-    "colors": {
-        "main1": "purple-500",
-        "header_gradient_interval": 100,
-    },
-    "social": {
-        "youtube": "https://www.youtube.com/kjaymiller",
-        "twitter": "https://twitter.com/kjaymiller",
-        "linkedin": "https://linkedin.com/in/kjaymiller",
-        "github": "https://github.com/kjaymiller",
-        "mastodon": "https://mastodon.social/@kjaymiller",
-    }
-</code></p>
+<div class="codehilite">
+<pre><span></span><code><span class="nt">&quot;theme&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
+<span class="w">    </span><span class="nt">&quot;favicon&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;https:fav.farm/☕&quot;</span><span class="p">,</span>
+<span class="w">    </span><span class="nt">&quot;fontawesome&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;abcd1234&quot;</span><span class="p">,</span>
+<span class="w">    </span><span class="nt">&quot;colors&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
+<span class="w">        </span><span class="nt">&quot;main1&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;purple-500&quot;</span><span class="p">,</span>
+<span class="w">        </span><span class="nt">&quot;header_gradient_interval&quot;</span><span class="p">:</span><span class="w"> </span><span class="mi">100</span><span class="p">,</span>
+<span class="w">    </span><span class="p">},</span>
+<span class="w">    </span><span class="nt">&quot;social&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
+<span class="w">        </span><span class="nt">&quot;youtube&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;https://www.youtube.com/kjaymiller&quot;</span><span class="p">,</span>
+<span class="w">        </span><span class="nt">&quot;twitter&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;https://twitter.com/kjaymiller&quot;</span><span class="p">,</span>
+<span class="w">        </span><span class="nt">&quot;linkedin&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;https://linkedin.com/in/kjaymiller&quot;</span><span class="p">,</span>
+<span class="w">        </span><span class="nt">&quot;github&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;https://github.com/kjaymiller&quot;</span><span class="p">,</span>
+<span class="w">        </span><span class="nt">&quot;mastodon&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;https://mastodon.social/@kjaymiller&quot;</span><span class="p">,</span>
+<span class="w">    </span><span class="p">}</span>
+</code></pre>
+</div>
 
 <h2>Settings</h2>
 
@@ -89,22 +96,22 @@ SITE_AUTHOR = {
 <code>#9333ea</code> ❌
 <code>rgb(147 51 234)</code> ❌</p>
 
-<p>```json</p>
+<div class="codehilite">
+<pre><span></span><code><span class="err">Si</span><span class="kc">n</span><span class="err">ce</span><span class="w"> </span><span class="kc">t</span><span class="err">his</span><span class="w"> </span><span class="err">is</span><span class="w"> </span><span class="kc">ta</span><span class="err">ilwi</span><span class="kc">n</span><span class="err">d</span><span class="w"> </span><span class="err">you</span><span class="w"> </span><span class="err">ca</span><span class="kc">n</span><span class="w"> </span><span class="err">modi</span><span class="kc">f</span><span class="err">y</span><span class="w"> </span><span class="kc">t</span><span class="err">he</span><span class="w"> </span><span class="err">css</span><span class="w"> </span><span class="err">color</span><span class="w"> </span><span class="err">by</span><span class="w"> </span><span class="err">modi</span><span class="kc">f</span><span class="err">yi</span><span class="kc">n</span><span class="err">g</span><span class="w"> </span><span class="kc">t</span><span class="err">he</span><span class="w"> </span><span class="kc">ta</span><span class="err">ilwi</span><span class="kc">n</span><span class="err">d</span><span class="w"> </span><span class="err">co</span><span class="kc">nf</span><span class="err">ig.</span>
 
-<p>Since this is tailwind you can modify the css color by modifying the tailwind config.</p>
-
-<p><code>js
-// tailwind.config.js
-module.exports = {
-  theme: {
-    extend: {
-      colors: {
-        'main1': 'rgb(147 51 234)',
-      }
-    }
-  }
-}
-</code></p>
+<span class="err">```js</span>
+<span class="c1">// tailwind.config.js</span>
+<span class="err">module.expor</span><span class="kc">ts</span><span class="w"> </span><span class="err">=</span><span class="w"> </span><span class="p">{</span>
+<span class="w">  </span><span class="kc">t</span><span class="err">heme</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
+<span class="w">    </span><span class="err">ex</span><span class="kc">ten</span><span class="err">d</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
+<span class="w">      </span><span class="err">colors</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
+<span class="w">        </span><span class="err">&#39;mai</span><span class="kc">n</span><span class="mi">1</span><span class="err">&#39;</span><span class="p">:</span><span class="w"> </span><span class="err">&#39;rgb(</span><span class="mi">147</span><span class="w"> </span><span class="mi">51</span><span class="w"> </span><span class="mi">234</span><span class="err">)&#39;</span><span class="p">,</span>
+<span class="w">      </span><span class="p">}</span>
+<span class="w">    </span><span class="p">}</span>
+<span class="w">  </span><span class="p">}</span>
+<span class="p">}</span>
+</code></pre>
+</div>
 
 <h4>header<em>gradient</em>interval (default: 100)</h4>
 
@@ -139,19 +146,26 @@ module.exports = {
 
 </article>
 </section>
-      </main role="main">
+      </div>
       <div>
 <hr />
-<footer role="contentinfo" class="grid grid-cols-3 bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
-  <div id="footer-column-1" class= md:mx-auto text-small">
-    <p>http://localhost:8000/</p>
-    <p>Website Created with <a href="https://github.com/render-engine/render-engine">Render Engine</a> and <a
-                            class="hover:underline" href="https://github.com/kjaymiller/render_engine_theme_kjaymiller">kjaymiller theme</a>
+<footer class="bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
+  <div class="lg:flex md:mx-auto h-full justify-around items-center">
+    <p> kjaymiller.com</p>
+    <p>Website made with <a
+                            class="hover:underline" href="https://github.com/kjaymiller/render_engine">Render Engine</a> and <a href="https://tailwindcss.com">TailwindCSS</a>
     
-    </div>
-    <div id="footer-column-2">
-    </div>
-    <div>
+    hosted on Azure Static Web Apps                        <div>
+      <a class="hover:underline" href="/blog.rss"><span class="icon"><i class="fas fa-rss"></i></a>
+<a class="p-1" href="https://www.youtube.com/channel/UCjoJU65IbXkKXsNqydro05Q/">
+    <i class="text-red-700 text-2xl m-1 fa-brands fa-youtube"></i>
+</a>
+<a class="rounded-xl opacity-50 p-1 hover:opacity-100" href="https://twitter.com/kjaymiller">
+    <i class=" text-blue-500 m-1 text-2xl fa-brands fa-twitter-square"></i>
+</a>
+<a class="rounded-xl opacity-50  p-1 hover:opacity-100" href="https://linkedin.com/in/kjaymiller">
+    <i class=" text-blue-900 m-1 text-2xl fa-brands fa-linkedin"></i>
+</a>    </div>
   </div>
 </footer>      </div>
     </div>
