--- a/output/index.html
+++ b/output/index.html
@@ -1,47 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <link rel="icon" href="https://fav.farm/👩🏾‍💻" />
     <!-- Required meta tags -->
-    <link rel="icon" href="https://fav.farm/📓" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/static/css/tailwind.css" />
+    <!-- Pygments for code blocks -->
+    <link rel="stylesheet" href="/static/css/pygments.css" />
     <script src="https://kit.fontawesome.com/94d9a219ee.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/static/css/article.css" />    <title>
-       - Kjaymiller Render Engine Theme
+    <title>
+         - Kjaymiller Render Engine Theme
     </title>
-  </head>
-  <body class="dark:bg-slate-800 dark:text-slate-100"> 
+</head>  <body class="dark:bg-slate-800 dark:text-slate-100"> 
     <div class="flex flex-col h-screen">
-<div class="
-  bg-gradient-to-br    
-from-purple-600
-to-indigo-800
+
+<nav role="navigation"><div class="
+  bg-gradient-to-br
+  from-indigo-200
+  to-indigo-300
   flex
   flex-wrap
   items-baseline
   px-5
   py-2
   ">
-    <h1 class="title mx-3 text-2xl font-bold text-gray-200">
+    <h1 class="title mx-3 text-xl font-bold text-gray-800">
       <a class="no-underline" href="/">Kjaymiller Render Engine Theme</a>
     </h1>
-    <div class="hidden md:block p-2">
+    </div>
+    <div class="my-2 p-2 flex justify-center">
+      <a class="
+            p-3
+            mx-3
+            rounded-lg
+            hover:bg-gray-100
+            opacity-75
+            hover:opacity-100
+            hover:text-indigo-800
+            font-semibold
+            text-xl
+            hover:font-bold
+            dark:text-slate-200
+            text-slate-800
+            no-underline
+          " href="/docs.html"
+          aria-label="Docs">
+          Docs
+      </a>
+      <a class="
+            p-3
+            mx-3
+            rounded-lg
+            hover:bg-gray-100
+            opacity-75
+            hover:opacity-100
+            hover:text-indigo-800
+            font-semibold
+            text-xl
+            hover:font-bold
+            dark:text-slate-200
+            text-slate-800
+            no-underline
+          " href="https://github.com/kjaymiller/render_engine_kjaymiller_theme"
+          aria-label="">
+          <i class="fa-brands fa-github" aria-hidden="true" title=""></i>
+          
+      </a>
   </div>
-<a class="p-1" href="https://www.youtube.com/channel/UCjoJU65IbXkKXsNqydro05Q/">
-    <i class="text-red-700 text-2xl m-1 fa-brands fa-youtube"></i>
-</a>
-<a class="rounded-xl opacity-50 p-1 hover:opacity-100" href="https://twitter.com/kjaymiller">
-    <i class=" text-blue-500 m-1 text-2xl fa-brands fa-twitter-square"></i>
-</a>
-<a class="rounded-xl opacity-50  p-1 hover:opacity-100" href="https://linkedin.com/in/kjaymiller">
-    <i class=" text-blue-900 m-1 text-2xl fa-brands fa-linkedin"></i>
-</a></div>      <div class="flex-grow mx-2 md:mx-auto container">
+</nav>      <main class="flex-grow mx-2 md:mx-auto container">
 <section>
 <div class="my-4">
     <h1 class="text-4xl font-extrabold"></h1>
 </div>
-<article class="prose">
+<article class="prose lg:prose-xl dark:prose-invert prose-slate">
     <h1>KJayMiller Render Engine Theme</h1>
 
 <p><a href="https://actions-badge.atrox.dev/kjaymiller/render_engine_theme_kjaymiller/goto?ref=main"><img src="https://img.shields.io/endpoint.svg?url=https%3A%2F%2Factions-badge.atrox.dev%2Fkjaymiller%2Frender_engine_theme_kjaymiller%2Fbadge%3Fref%3Dmain&style=flat-square" alt="Github Build Status" /></a></p>
@@ -128,26 +161,37 @@ to-indigo-800
 
 </article>
 </section>
-      </div>
+      </main role="main">
       <div>
-<hr />
-<footer class="bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
-  <div class="lg:flex md:mx-auto h-full justify-around items-center">
-    <p> kjaymiller.com</p>
-    <p>Website made with <a
-                            class="hover:underline" href="https://github.com/kjaymiller/render_engine">Render Engine</a> and <a href="https://tailwindcss.com">TailwindCSS</a>
+<hr class="mt-4 "/>
+<footer role="contentinfo" class="grid grid-cols-3 bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
+  <div id="footer-column-1" class= md:mx-auto text-small">
+    <p>http://localhost:8000/</p>
+    <p>Website Created with <a href="https://github.com/render-engine/render-engine">Render Engine</a> and <a
+                            class="hover:underline" href="https://github.com/kjaymiller/render_engine_theme_kjaymiller">kjaymiller theme</a>
     
-    hosted on Azure Static Web Apps                        <div>
-      <a class="hover:underline" href="/blog.rss"><span class="icon"><i class="fas fa-rss"></i></a>
-<a class="p-1" href="https://www.youtube.com/channel/UCjoJU65IbXkKXsNqydro05Q/">
-    <i class="text-red-700 text-2xl m-1 fa-brands fa-youtube"></i>
+    </div>
+    <div id="footer-column-2">
+    </div>
+    <div id="footer-column-3">
+
+
+<a class="rounded-xl no-underline opacity-50 p-1 hover:opacity-100" href="">
+    <i class="    text-slate-800
+ m-1 text-2xl fa-brands fa-x-twitter"></i>
 </a>
-<a class="rounded-xl opacity-50 p-1 hover:opacity-100" href="https://twitter.com/kjaymiller">
-    <i class=" text-blue-500 m-1 text-2xl fa-brands fa-twitter-square"></i>
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="https://www.linkedin.com/in/kjaymiller/">
+    <i class="    text-blue-900
+ m-1 text-2xl fa-brands fa-linkedin"></i>
 </a>
-<a class="rounded-xl opacity-50  p-1 hover:opacity-100" href="https://linkedin.com/in/kjaymiller">
-    <i class=" text-blue-900 m-1 text-2xl fa-brands fa-linkedin"></i>
-</a>    </div>
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="https://github.com/kjaymiller/render_engine_kjaymiller_theme">
+    <i class="    text-slate-800
+ m-1 text-2xl fa-brands fa-github"></i>
+</a>
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="https://mastodon.social/@kjaymiller">
+    <i class="    text-indigo-400
+ m-1 text-2xl fa-brands fa-mastodon"></i>
+</a>
   </div>
 </footer>      </div>
     </div>
