--- a/output/theme-settings.html
+++ b/output/theme-settings.html
@@ -1,54 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <link rel="icon" href="https://fav.farm/👩🏾‍💻" />
     <!-- Required meta tags -->
-    <link rel="icon" href="https://fav.farm/📓" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/static/css/tailwind.css" />
+    <!-- Pygments for code blocks -->
+    <link rel="stylesheet" href="/static/css/pygments.css" />
     <script src="https://kit.fontawesome.com/94d9a219ee.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/static/css/article.css" />    <title>
-      Theme Settings - Kjaymiller Render Engine Theme
+    <title>
+        Theme Settings - Kjaymiller Render Engine Theme
     </title>
-  </head>
-  <body class="dark:bg-slate-800 dark:text-slate-100"> 
+</head>  <body class="dark:bg-slate-800 dark:text-slate-100"> 
     <div class="flex flex-col h-screen">
-<div class="
-  bg-gradient-to-br    
-from-purple-600
-to-indigo-800
+
+<nav role="navigation"><div class="
+  bg-gradient-to-br
+  from-indigo-200
+  to-indigo-300
   flex
   flex-wrap
   items-baseline
   px-5
   py-2
   ">
-    <h1 class="title mx-3 text-2xl font-bold text-gray-200">
+    <h1 class="title mx-3 text-xl font-bold text-gray-800">
       <a class="no-underline" href="/">Kjaymiller Render Engine Theme</a>
     </h1>
-    <div class="hidden md:block p-2">
+    </div>
+    <div class="my-2 p-2 flex justify-center">
+      <a class="
+            p-3
+            mx-3
+            rounded-lg
+            hover:bg-gray-100
+            opacity-75
+            hover:opacity-100
+            hover:text-indigo-800
+            font-semibold
+            text-xl
+            hover:font-bold
+            dark:text-slate-200
+            text-slate-800
+            no-underline
+          " href="/docs.html"
+          aria-label="Docs">
+          Docs
+      </a>
+      <a class="
+            p-3
+            mx-3
+            rounded-lg
+            hover:bg-gray-100
+            opacity-75
+            hover:opacity-100
+            hover:text-indigo-800
+            font-semibold
+            text-xl
+            hover:font-bold
+            dark:text-slate-200
+            text-slate-800
+            no-underline
+          " href="https://github.com/kjaymiller/render_engine_kjaymiller_theme"
+          aria-label="">
+          <i class="fa-brands fa-github" aria-hidden="true" title=""></i>
+          
+      </a>
   </div>
-<a class="p-1" href="https://www.youtube.com/channel/UCjoJU65IbXkKXsNqydro05Q/">
-    <i class="text-red-700 text-2xl m-1 fa-brands fa-youtube"></i>
-</a>
-<a class="rounded-xl opacity-50 p-1 hover:opacity-100" href="https://twitter.com/kjaymiller">
-    <i class=" text-blue-500 m-1 text-2xl fa-brands fa-twitter-square"></i>
-</a>
-<a class="rounded-xl opacity-50  p-1 hover:opacity-100" href="https://linkedin.com/in/kjaymiller">
-    <i class=" text-blue-900 m-1 text-2xl fa-brands fa-linkedin"></i>
-</a></div>      <div class="flex-grow mx-2 md:mx-auto container">
+</nav>      <main class="flex-grow mx-2 md:mx-auto container">
 <section>
 <div class="my-4">
     <h1 class="text-4xl font-extrabold">Theme Settings</h1>
 </div>
-<article class="prose">
+<article class="prose lg:prose-xl dark:prose-invert prose-slate">
     <p>This theme supports embeds for many different tools.</p>
 
-<h2>Site Settings</h2>
+<h2 id="site-settings">Site Settings</h2>
 
 <p>There are some values that are not in the settings that will be optionally used in the theme.</p>
 
-<h3>SITE_AUTHOR</h3>
+<h3 id="site_author">SITE_AUTHOR</h3>
 
 <p>The author is used in the footer and in the meta tags. Be sure that the Author format is correct.</p>
 
@@ -58,7 +91,37 @@ to-indigo-800
 }
 </code></pre>
 
-<h2>Adding theme settings</h2>
+<h3 id="header_links">HEADER_LINKS</h3>
+
+<p>Header links are dictionary or class objeccts are used in the header. </p>
+
+<p>Here are valid parameters:</p>
+
+<ul>
+<li>text: (Required) The text that will be displayed in the header</li>
+<li>url: (Required) The url that the link will go to</li>
+<li>icon: (Optional) The fontawesome icon that will be used in the link</li>
+</ul>
+
+<p>Below is an example of a valid header link using the home icon.</p>
+
+<div class="codehilite">
+<pre><span></span><code><span class="p">{</span>
+  <span class="s2">&quot;HEADER_LINKS&quot;</span><span class="p">:</span> <span class="p">{</span>
+    <span class="s2">&quot;text&quot;</span><span class="p">:</span> <span class="s2">&quot;Home&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;url&quot;</span><span class="p">:</span> <span class="s2">&quot;/&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;icon&quot;</span><span class="p">:</span> <span class="s2">&quot;fas fa-home&quot;</span><span class="p">,</span>
+  <span class="p">},</span>
+<span class="p">}</span>
+</code></pre>
+</div>
+
+<blockquote>
+  <p><strong>NOTE</strong>
+  There is a setting specifically for showing social icons. See <a href="#social-optional">social</a> for more information.</p>
+</blockquote>
+
+<h2 id="adding-theme-settings">Adding theme settings</h2>
 
 <p>Here is an example settings for this theme:</p>
 
@@ -80,13 +143,13 @@ to-indigo-800
 </code></pre>
 </div>
 
-<h2>Settings</h2>
+<h2 id="settings">Settings</h2>
 
 <p>In this theme all settings are optional.</p>
 
-<h3>colors</h3>
+<h3 id="colors">colors</h3>
 
-<h4>main1 (default: gray-600)</h4>
+<h4 id="main1-default-gray-600">main1 (default: gray-600)</h4>
 
 <p>The primary color used in the site. This is present in the header and as some accents.</p>
 
@@ -113,15 +176,15 @@ to-indigo-800
 </code></pre>
 </div>
 
-<h4>header<em>gradient</em>interval (default: 100)</h4>
+<h4 id="header_gradient_interval-default-100">header<em>gradient</em>interval (default: 100)</h4>
 
 <p>The strength of the gradient used in the header. This can be an increment of 100 between (+-)100 and (+-)800. you can also use in increment of (-)50 and (+)50 when trying to get to the 50 and 950 color values.</p>
 
-<h3>favicon (default: <a href="https://fav.farm/👨🏾‍💻">https://fav.farm/👨🏾‍💻</a>)</h3>
+<h3 id="favicon-default-httpsfavfarm">favicon (default: <a href="https://fav.farm/👨🏾‍💻">https://fav.farm/👨🏾‍💻</a>)</h3>
 
 <p>This is a path/url to a favicon.</p>
 
-<h3>fontawesome (optional)</h3>
+<h3 id="fontawesome-optional">fontawesome (optional)</h3>
 
 <p>This is a fontawesome key. You can get one from <a href="https://fontawesome.com/">fontawesome</a>.</p>
 
@@ -130,7 +193,7 @@ to-indigo-800
   This is not required but if you do not provide one you will not be able to use any of the fontawesome icons in social.</p>
 </blockquote>
 
-<h3>social (optional)</h3>
+<h3 id="social-optional">social (optional)</h3>
 
 <p>This is a dictionary of social links. You can use any of the following keys:</p>
 
@@ -146,26 +209,37 @@ to-indigo-800
 
 </article>
 </section>
-      </div>
+      </main role="main">
       <div>
-<hr />
-<footer class="bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
-  <div class="lg:flex md:mx-auto h-full justify-around items-center">
-    <p> kjaymiller.com</p>
-    <p>Website made with <a
-                            class="hover:underline" href="https://github.com/kjaymiller/render_engine">Render Engine</a> and <a href="https://tailwindcss.com">TailwindCSS</a>
+<hr class="mt-4 "/>
+<footer role="contentinfo" class="grid grid-cols-3 bottom-0 container mx-auto shadow rounded-md bottom-0 bg-slate-50 dark:bg-slate-800 dark:text-slate-100 px-4 my-4 h-24">
+  <div id="footer-column-1" class= md:mx-auto text-small">
+    <p>http://localhost:8000/</p>
+    <p>Website Created with <a href="https://github.com/render-engine/render-engine">Render Engine</a> and <a
+                            class="hover:underline" href="https://github.com/kjaymiller/render_engine_theme_kjaymiller">kjaymiller theme</a>
     
-    hosted on Azure Static Web Apps                        <div>
-      <a class="hover:underline" href="/blog.rss"><span class="icon"><i class="fas fa-rss"></i></a>
-<a class="p-1" href="https://www.youtube.com/channel/UCjoJU65IbXkKXsNqydro05Q/">
-    <i class="text-red-700 text-2xl m-1 fa-brands fa-youtube"></i>
+    </div>
+    <div id="footer-column-2">
+    </div>
+    <div id="footer-column-3">
+
+
+<a class="rounded-xl no-underline opacity-50 p-1 hover:opacity-100" href="">
+    <i class="    text-slate-800
+ m-1 text-2xl fa-brands fa-x-twitter"></i>
 </a>
-<a class="rounded-xl opacity-50 p-1 hover:opacity-100" href="https://twitter.com/kjaymiller">
-    <i class=" text-blue-500 m-1 text-2xl fa-brands fa-twitter-square"></i>
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="https://www.linkedin.com/in/kjaymiller/">
+    <i class="    text-blue-900
+ m-1 text-2xl fa-brands fa-linkedin"></i>
 </a>
-<a class="rounded-xl opacity-50  p-1 hover:opacity-100" href="https://linkedin.com/in/kjaymiller">
-    <i class=" text-blue-900 m-1 text-2xl fa-brands fa-linkedin"></i>
-</a>    </div>
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="https://github.com/kjaymiller/render_engine_kjaymiller_theme">
+    <i class="    text-slate-800
+ m-1 text-2xl fa-brands fa-github"></i>
+</a>
+<a class="rounded-xl opacity-50 no-underline p-1 hover:opacity-100" href="https://mastodon.social/@kjaymiller">
+    <i class="    text-indigo-400
+ m-1 text-2xl fa-brands fa-mastodon"></i>
+</a>
   </div>
 </footer>      </div>
     </div>
